--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -18,7 +18,7 @@
           <div class="col-sm-4">
         <span class="p-input-icon-left mr-auto float-end">
           <i class="pi pi-search"></i>
-          <input pInputText class="p-inputtext-sm"  type="text" (input)="applyFilterGlobal($event, 'contains')" placeholder="Search keyword" />
+          <input style="border-radius: 0; height: 35px;" pInputText class="p-inputtext-sm"  type="text" (input)="applyFilterGlobal($event, 'contains')" placeholder="Search keyword" />
       </span>
           </div>
         </div>
